--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "googleapis": "^148.0.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
-    "sql.js": "^1.13.0"
+    "sql.js": "^1.13.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
