--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@prisma/client": "^6.10.1",
     "@react-oauth/google": "^0.12.1",
     "better-sqlite3": "^11.10.0",
     "googleapis": "^148.0.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
+    "prisma": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
